--- a/.bash_history/app/src/main/AndroidManifest.xml
+++ b/.bash_history/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StartUpActivity"
+        <activity
+            android:name=".StartUpActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,6 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".UserRegisterActivity" />
+        <activity android:name=".MerchantRegActivity"></activity>
     </application>
 
 </manifest>
