Added user details page 1

--- a/.bash_history/app/src/main/AndroidManifest.xml
+++ b/.bash_history/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".UserRegisterActivity" />
-        <activity android:name=".MerchantRegActivity"></activity>
+        <activity android:name=".MerchantRegActivity" />
+        <activity android:name=".UserDetialsPage1"></activity>
     </application>
 
 </manifest>
