created action bar xml file. And just added fragments, created main activity.Need to update it

--- a/.bash_history/app/src/main/AndroidManifest.xml
+++ b/.bash_history/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".UserRegisterActivity" />
         <activity android:name=".MerchantRegActivity" />
         <activity android:name=".UserDetialsPage1" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
