--- a/.bash_history/app/src/main/AndroidManifest.xml
+++ b/.bash_history/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="collationsoftsolution.poolit">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,6 +26,9 @@
         <activity android:name=".UserRegisterActivity" />
         <activity android:name=".MerchantRegActivity" />
         <activity android:name=".UserDetialsPage1" />
+        <activity android:name=".DropActionsActivity" />
+        <activity android:name=".menuactions.NewPool"/>
+        <activity android:name=".menuactions.NewGroup"/>
         <activity android:name=".MainActivity"></activity>
     </application>
 
